test: UserServiceTest 수정